# status-mobile

./: .Jenkinsfile.swp  .TOOLVERSIONS  .babelrc  .carve_ignore  .detoxrc.js  .detoxrc.json  .dockerignore  .env  .env.e2e  .env.jenkins  .env.nightly  .env.nightly.staging.fleet  .env.prod  .env.release  .env.tfprod  .envrc  .eslintrc.js  .flowconfig  .gitattributes  .gitignore  .mailmap  .nrepl-port  .nycrc  .prettierignore  .prettierignore 2  .prettierrc.js  .re-natal  .snyk  .watchmanconfig  .xcode.env.local  .yarnrc  .zprintrc  1  CHANGELOG.md  Dockerfile  ICONS.md  Jenkinsfile  Jenkinsfile.desktopbuild  Jenkinsfile.desktopbuild.tmp  Jenkinsfile.fastlane.clean  (+73 more)
.clj-kondo/: config.edn
.dependabot/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  github-bot.yml  package-lock-snitch.config.json  stale.yml
.lsp/: config.edn
.portal/: vs-code.edn
.storybook/: .babelrc  fonts.js  index.js  main.js  preview.js
android/: build.gradle  gradle.properties  gradlew  settings.gradle
ci/: Jenkinsfile  Jenkinsfile.android  Jenkinsfile.combined  Jenkinsfile.desktopbuild  Jenkinsfile.e2e-nightly  Jenkinsfile.fastlane.clean  Jenkinsfile.ios  Jenkinsfile.linux  Jenkinsfile.macos  Jenkinsfile.nightly  Jenkinsfile.nightly-end-to-end  Jenkinsfile.nightly_desktop  Jenkinsfile.nightly_fastlane  Jenkinsfile.nightly_fastlane_staging_fleet  Jenkinsfile.nix-cache  Jenkinsfile.nix.linux  Jenkinsfile.nix.macos  Jenkinsfile.parameters  Jenkinsfile.release  Jenkinsfile.tests  Jenkinsfile.upload_release_android  Jenkinsfile.upload_release_ios  Jenkinsfile.visual  Jenkinsfile.windows  README.md  android.groovy  common.groovy  desktop.groovy  download-realm.js  ghcmgr.groovy  github.groovy  ios.groovy  jenkins.groovy  mobile.groovy  nix.groovy  utils.groovy
deployment/: env
desktop/: CMakeLists.txt  Toolchain-Ubuntu-mingw64.cmake  appconfig.cpp  appconfig.h  build.bat  build.sh  main.cpp  run-app.bat.in  run-app.sh  run-app.sh.in
desktop/CMakeModules/: CompleteBundle.cmake  CompleteBundleWin.cmake.in  QtConfiguration.cmake
desktop/docker/: Dockerfile  Makefile
desktop/docker/linux/: Dockerfile  Makefile
desktop/docker/windows/: Dockerfile  Makefile  README.md
desktop/js_files/: .snyk  package.json
desktop/reportApp/: CMakeLists.txt  main.cpp  main.qml  main.qrc  reportpublisher.cpp  reportpublisher.h
desktop_files/: .re-natal  .snyk  package-lock.json  package.json  package.json.orig
doc/: DEPENDENCIES.md  FDROID.md  FGH.md  ICONS.md  IDE_SETUP.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  REVIEW.md  STARTING_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  codebase-structure-and-guidelines.md  component-tests-overview.md  custom-status-go.md  debugging.md  dependencies.md  export-icons.md  faq.md  git-etiquette.md  how-to-catch-crash-on-ios.md  how-to-launch-e2e.md  ide-setup.md  import-assets.md  intro.md  merging-pr-process.md  new-guidelines.md  patching-3rdparties.md  patching.md  pipeline_process.md  pixel-perfection.md  post-mortem.md  pr-review-policy.md  refactoring-guidelines.md  release-checklist.md  release-guide.md  setup-guide-for-windows-os.md  starting-guide.md  status-go-changes.md  storybook.md  (+3 more)
docker-build/: Dockerfile  README.md  docker-compose.yml
e2e/: button.e2e.js  config.json  global-setup.js  setup.js
extension/: Task.js  index.js  package-lock.json  package.json
externs/: externs.js
fastlane/: .env  Appfile  Fastfile  Gemfile  Matchfile  Pluginfile  default.nix  gemset.nix  update  update.sh
fiddle/: README.md  deps.edn  dev.cljs.edn  package.json  prepare.clj  webpack.config.js
ios/: .bridge.sh  .xcode.env  Config.xcconfig  Debug.xcconfig  Dummy.swift  Dynamic.swift  GoogleService-Info.plist  Mapbox.framework  PR.xcconfig  Podfile  Release.xcconfig  Status-Prefix.pch  StatusIm-Bridging-Header.h  StatusImPrefix.pch  StatusUIViewController.h  StatusUIViewController.m  TestFairy.h  archive-develop.plist  archive-release.plist  launch-image-universal.storyboard  pom.xml  upload-dsym.sh
locale/: es.json  pl.json
logs/: README.md
maestro/: create-account-or-login.yaml  login.yaml  onboarding.yaml
mobile_files/: metro.config.js  package-lock.json  package.json  package.json.orig
modules/react-native-status/desktop/: CMakeLists.txt  FindGo.cmake  JSONParser.cmake  build-status-go.bat  build-status-go.sh  rctstatus.cpp  rctstatus.h
nix/: DETAILS.md  KNOWN_ISSUES.md  README.md  bootstrapped-shell.nix  build.sh  clean.sh  config.nix  default.nix  derivation.nix  nix.conf  nixpkgs-bootstrap.nix  overlay.nix  pkgs.nix  platform.nix  shell-bootstrap.nix  shell.nix  shell.sh  shells.nix  targets.nix  utils.nix
packager/: config.js  modulePaths.js
patches/: BlurView-build.gradle.patch  BlurView.ios.tsx.patch  BlurView.mm.patch  BlurViewNativeComponent.ts.patch  CameraRoll.ts.patch  CameraRollModule.java.patch  LayoutDirectionApplier.kt.patch  ModalContentLayout.kt.patch  NativeCameraRollModule.ts.patch  NativeCameraRollModuleSpec.java.patch  RNCCameraRoll.mm.patch  ReactSettingsExtension.kt.patch  ReactTypefaceUtils.java.patch  ReactViewGroup.kt.patch  VibrancyViewNativeComponent.ts.patch  build.gradle.patch  change_realm_for_pkg.patch  ios-configure-glog.sh.patch  metro+0.24.7.patch  metro+0.30.2.patch  metro+0.38.4.patch  metro+0.48.3.patch  metro+0.48.5.patch  metro-config+0.48.5.patch  react-native-android.patch  react-native-keychain.patch  react-native-mail-build.gradle.patch  react-native-navigation-button-presenter.patch  react-native-navigation.patch  react-native-safe-area-context+1.0.2.patch  react-native-script.patch  react-native.patch  settings.gradle.kts.patch
react-native-patches/: RCTUITextView.m
resources/: chats.json  commands.js  console.js  dapp.js  default_contact_groups.json  default_contacts.json  default_networks.json  default_public_chats.json  fontello-config.json  i18n.js  jquery-3.1.1.min.js  privacy.mdwn  state_of_the_dapps.json  status.js  terms-of-use.mdwn  wallet.js  web3_init.js  webview.js
scripts/: adb_devices_abis.sh  add-gcroots.sh  (+74 more)
(+8842 files in other folders)
